--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/todo_app?allowPublicKeyRetri
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 spring.datasource.hikari.pool-name=TodoHikariPool
 spring.datasource.hikari.maximum-pool-size=20
@@ -11,6 +12,10 @@ spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.leak-detection-threshold=2000
+logging.level.com.zaxxer.hikari=DEBUG
+
+management.metrics.enable.all=true
+management.endpoints.web.exposure.include=health,metrics,info
 
 spring.jmx.enabled=true
 management.endpoint.info.enabled=true
